# bam-handler

./: Cargo.toml  README.md  calc.rb  dummy.fa.fai
src/: bigbed.rs  fasta.rs  frag.rs  lib.rs  main.rs  range.rs
src/lib/: bigbed.rs  mod.rs  range.rs
