[package]
name = "bamhandler"
version = "0.1.0"
authors = ["6br <tfdvrt@gmail.com>"]
edition = "2018"
keywords = ["bioinformatics", "genome browser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "rust_test"
#crate-type = ["staticlib", "cdylib"]

[dependencies]
# bio = { git = "https://github.com/rust-bio/rust-bio", rev="5b2b67b" }
bam = { git = "https://github.com/6br/bam" }
#bitpacking = "0.5" # Pfor
byteorder = "*"
csv = "*"
#flate2 = "1.0" # A streaming compression/decompression library
#libbigwig = { git = "https://github.com/6br/libBigWig" } # bigWig
lazy_static = "*"
log = "*"
itertools = "*"
regex = "*" 
#rust-htslib = { version = "*", features = ["serde"] } # htsLib
#serde = "*"
#serde_derive = "*"
#serde_json = "*"
#serde_yaml = "*"
genomic_range = { git = "https://github.com/6br/genomic_range", rev = "cba2b1c" }

[build-dependencies]
protoc-rust = "2.0"